bevy_gpu_compute_macro/tests/ui/incorrect_vec_constructor_in_macro.stderr
error[E0639]: cannot create non-exhaustive struct using struct expression
 --> tests/ui/incorrect_vec_constructor_in_macro.rs:3:1
  |
3 | #[wgsl_shader_module]
  | ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `wgsl_shader_module` (in Nightly builds, run with -Z macro-backtrace for more info)
